--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,7 +4,9 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-  webserver: 
+  webserver:
+    ports:
+      - "443:443" 
     volumes: 
       - certbot-etc:/etc/letsencrypt
       - ./nginx-conf/prod:/etc/nginx/conf.d
