--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - db
     volumes:
       - wp_data:/var/www/html
-      - ./wp-content:/var/www/html/wp-content
+      - ./maddieks:/var/www/html/wp-content/themes/maddieks
     restart: always
     ports: 
       - "9000:9000"
@@ -43,16 +43,25 @@ services:
     restart: unless-stopped
     volumes: 
       - wp_data:/var/www/html
-      - ./wp-content:/var/www/html/wp-content
+      - ./maddieks:/var/www/html/wp-content/themes/maddieks
     networks:
       - app-network
     ports: 
       - "3000:80"
   
+  # phpmyadmin: 
+  #   image: phpmyadmin/phpmyadmin:latest
+  #   environment:
+  #     - PMA_HOST=db
+  #     - PMA_PORT=3306
+  #   ports: 
+  #     - "8081:80"
+  #   depends_on:
+  #     - db
+  
 volumes:
   db_data:
   wp_data:
-  wp_content:
 
 networks: 
   app-network: 
