--- a/nginx-conf/prod/nginx-prod.conf
+++ b/nginx-conf/prod/nginx-prod.conf
@@ -3,7 +3,9 @@ server {
         listen [::]:80;
 
         server_name maddie-ks.com www.maddie-ks.com;
-
+	
+	client_max_body_size 100M;
+	
         location ~ /.well-known/acme-challenge {
                 allow all;
                 root /var/www/html;
@@ -18,7 +20,8 @@ server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
         server_name maddie-ks.com www.maddie-ks.com;
-
+	
+	client_max_body_size 100M;
         index index.php index.html index.htm;
 
         root /var/www/html;
