--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,69 +1,48 @@
-services: 
-  db:
-    image: mariadb:10.6.4-focal
-    container_name: db
-    command: '--default-authentication-plugin=mysql_native_password'
-    volumes: 
-      - db_data:/var/lib/mysql
-    restart: always
-    environment: 
-      - MYSQL_DATABASE=${MYSQL_DB_NAME}
-    expose: 
-      - 3306
-      - 33060
-    ports:
-      - 3306:3306
-    networks: 
-      - app-network
-
-  wordpress: 
-    image: wordpress:6.1.1-fpm-alpine
-    container_name: wordpress
+services:
+  wordpress:
+    build: 
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: maddieks_wordpress
     depends_on:
       - db
-    volumes:
-      - wp_data:/var/www/html
-      - ./maddieks:/var/www/html/wp-content/themes/maddieks
-    restart: always
-    ports: 
-      - "9000:9000"
+    ports:
+      - "8080:80"  # Map WordPress to localhost:8080
     environment:
-      - WORDPRESS_DB_HOST=db:3306
-      - WORDPRESS_DB_USER=${MYSQL_USER}
-      - WORDPRESS_DB_PASSWORD=${MYSQL_PASSWORD}
-      - WORDPRESS_DB_NAME=${MYSQL_DB_NAME}
-    networks: 
-      - app-network
-  
-  webserver: 
-    depends_on: 
-      - wordpress
-    image: nginx:1.23.3-alpine
-    container_name: webserver
-    restart: unless-stopped
-    volumes: 
-      - wp_data:/var/www/html
-      - ./maddieks:/var/www/html/wp-content/themes/maddieks
+      WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST}
+      WORDPRESS_DB_USER: ${MYSQL_USER}
+      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
+      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+      WP_HOME: ${WP_HOME}
+      WP_SITEURL: ${WP_SITEURL}
+    volumes:
+      - ./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
+      - ./themes/maddieks:/var/www/html/wp-content/themes/maddieks  # Mount your theme
+      # - ./20251002/uploads:/var/www/html/wp-content/uploads
+      # - ./20251002/plugins:/var/www/html/wp-content/plugins
+      # - ./wp-config.php:/var/www/html/wp-config.php
     networks:
-      - app-network
-    ports: 
-      - "3000:80"
-  
-  # phpmyadmin: 
-  #   image: phpmyadmin/phpmyadmin:latest
-  #   environment:
-  #     - PMA_HOST=db
-  #     - PMA_PORT=3306
-  #   ports: 
-  #     - "8081:80"
-  #   depends_on:
-  #     - db
-  
-volumes:
-  db_data:
-  wp_data:
+      - maddieks_wp_network
 
-networks: 
-  app-network: 
+  db:
+    image: mariadb:latest
+    container_name: maddieks_db
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    volumes:
+      - db_data:/var/lib/mysql  # Persist database data
+      - ./20251002/db:/docker-entrypoint-initdb.d
+    networks:
+      - maddieks_wp_network
+
+networks:
+  maddieks_wp_network:
     driver: bridge
 
+volumes:
+  wp_data:
+  db_data:
+  wp_uploads:
