fixed upload issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       WP_HOME: ${WP_HOME}
       WP_SITEURL: ${WP_SITEURL}
     volumes:
+      - wp_data:/var/www/html
       - ./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
       - ./themes/maddieks:/var/www/html/wp-content/themes/maddieks  # Mount your theme
       # - ./20251002/uploads:/var/www/html/wp-content/uploads
@@ -45,4 +46,3 @@ networks:
 volumes:
   wp_data:
   db_data:
-  wp_uploads:
